--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -1,70 +1,106 @@
-backend = "glx";
-glx-no-stencil = true;
-glx-copy-from-front = false;
-glx-swap-method = 1;
-blur-background = true;
-blur-kern = "7x7box";
- 
 # Shadow
-shadow = true;			# Enabled client-side shadows on windows.
-no-dock-shadow = true;		# Avoid drawing shadows on dock/panel windows.
-no-dnd-shadow = true;		# Don't draw shadows on DND windows.
-clear-shadow = true;		# Zero the part of the shadow's mask behind the window (experimental).
-shadow-radius = 10;		# The blur radius for shadows. (default 12)
-shadow-offset-x = -15;		# The left offset for shadows. (default -15)
-shadow-offset-y = -15;		# The top offset for shadows. (default -15)
-shadow-opacity = 0.5;
-menu-opacity = 1;
+shadow = true;
+# no-dnd-shadow = true;
+# no-dock-shadow = true;
+clear-shadow = true;
+detect-rounded-corners = true;
+shadow-radius = 5;
+shadow-offset-x = 1;
+shadow-offset-y = 1;
+shadow-opacity = .3;
+shadow-ignore-shaped = false;
 shadow-exclude = [
- #"! name~=''",
- "n:e:Notification",
- "n:e:Dunst",
- "n:e:dzen",
- "name = 'dzen slave'", 
- "name = 'gnome-screenshot'", 
- #"n:e:Docky",
- #"g:e:Synapse",
- #"g:e:Kupfer",
- "g:e:Conky",
- #"n:w:Firefox",
- "n:w:*Chrome*",
- #"n:w:*Chromium*",
- "class_g ?= 'dzen'",
- "class_g ?= 'gnome-screenshot'"
- #"class_g ?= 'Cairo-dock'",
- #"class_g ?= 'Xfce4-notifyd'",
- #"class_g ?= 'Xfce4-power-manager'"
+	"name = 'Notification'", 
+# workaround for conky until it provides window properties:
+	"override_redirect = 1 && !WM_CLASS@:s", 
+#	"class_g ?= 'Dunst'", 
+# disable shadows for hidden windows:
+	"_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+	"_GTK_FRAME_EXTENTS@:c",
+# disables shadows on sticky windows:
+#	"_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY'",
+# disables shadows on i3 frames
+	"class_g ?= 'i3-frame'"
 ];
 
-blur-background-exclude = [
- "name = 'gnome-screenshot'", 
- "class_g ?= 'gnome-screenshot'"
+# shadow-exclude-reg = "x10+0+0";
+# xinerama-shadow-crop = true;
+
+menu-opacity = 0.95;
+inactive-opacity = 0.93;
+active-opacity = 1;
+alpha-step = 0.01;
+inactive-dim = 0.0;
+blur-background = false;
+blur-kern = "3x3box";
+
+fading = false;
+fade-delta = 1;
+fade-in-step = 0.03;
+fade-out-step = 0.03;
+fade-exclude = [ ];
+
+backend = "xrender";
+mark-wmwin-focused = true;
+mark-ovredir-focused = true;
+detect-client-opacity = true;
+unredir-if-possible = true;
+refresh-rate = 0;
+vsync = "none";
+dbe = false;
+paint-on-overlay = true;
+focus-exclude = [ "class_g = 'Cairo-clock'" ];
+detect-transient = true;
+detect-client-leader = true;
+invert-color-include = [ ];
+glx-copy-from-front = false;
+glx-swap-method = "undefined";
+
+opacity-rule = [ 
+"99:name *?= 'Call'", 
+"99:class_g = 'Chromium'", 
+"99:name *?= 'Conky'", 
+"99:class_g = 'Darktable'", 
+"50:class_g = 'Dmenu'", 
+"99:name *?= 'Event'", 
+"99:class_g = 'Firefox'", 
+"99:class_g = 'GIMP'", 
+"99:name *?= 'Image'",
+"99:class_g = 'Lazpaint'", 
+"99:class_g = 'Midori'", 
+"99:name *?= 'Minitube'", 
+"99:class_g = 'Mousepad'",
+"99:name *?= 'MuseScore'", 
+"90:name *?= 'Page Info'", 
+"99:name *?= 'Pale Moon'", 
+"90:name *?= 'Panel'", 
+"99:class_g = 'Pinta'", 
+"90:name *?= 'Restart'", 
+"99:name *?= 'sudo'", 
+"99:name *?= 'Screenshot'", 
+"99:class_g = 'Viewnior'", 
+"99:class_g = 'VirtualBox'", 
+"99:name *?= 'VLC'", 
+"99:name *?= 'Write'", 
+"93:class_g = 'URxvt' && !_NET_WM_STATE@:32a", 
+"0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'", 
+"96:_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY'" 
 ];
 
-#opacity-rule = ["85:class_g = 'gnome-terminal'"];
-opacity-rule = [
-	"50:class_g = 'Bspwm' && class_i = 'presel_feedback'",
-	"75:class_g = 'URxvt'"
-];
-
-# The shadow exclude options are helpful if you have shadows enabled. Due to the way compton draws its shadows, certain applications will have visual glitches 
-# (most applications are fine, only apps that do weird things with xshapes or argb are affected). 
-# This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
-
-# Fading
-fading = true; # Fade windows during opacity changes.
-fade-delta = 4; # The time between steps in a fade in milliseconds. (default 10).
-fade-in-step = 0.03; # Opacity change between steps while fading in. (default 0.028).
-fade-out-step = 0.03; # Opacity change between steps while fading out. (default 0.03).
-no-fading-openclose = false; # Fade windows in/out when opening/closing
-
-detect-client-opacity = true; # This prevents opacity being ignored for some apps. For example without this enabled my xfce4-notifyd is 100% opacity no matter what.
-
-#Window type settings
-wintypes:
+wintypes : 
 {
-  tooltip = { fade = true; shadow = false; };
-  menu = { shadow = false; };
-  dropdown_menu = { shadow = false; };
-  popup_menu =  { shadow = false; };
+  tooltip : 
+  {
+    fade = true;
+    shadow = false;
+    opacity = 0.85;
+    focus = true;
+  };
+  fullscreen : 
+  {
+    fade = true;
+    shadow = false;
+    opacity = 1;
+    focus = true;
+  };
 };
